<resources>
    <string name="app_name">MachineReableZone</string>
    <string name="camera">Camera</string>
    <string name="image_photo">image_photo</string>
    <string name="image_nfc">image_nfc</string>
    <string name="nfc">Nfc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_your_id">Tap your id</string>
    <string name="error_try_again">Error, try again</string>
    <string name="passport_number">Passport number</string>
    <string name="next">Next</string>
    <string name="birth_date">Birth date</string>
    <string name="issue_date">Issue date</string>
    <string name="read_passport_data">Read passport data</string>
    <string name="review_description">Be sure, that input your entered matches with fields in your passport</string>
    <string name="start">Start</string>
    <string name="error_nfc">Error nfc</string>
    <string name="error_nfc_is_disabled">Error nfc is disabled</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="date_of_birth_text">Date of birth</string>
    <string name="date_of_expiry_text">Date of expiry</string>
    <string name="error_dg1_is_null">Application error \'DG1\', please try again. If the problem persists report it us at panda@panda.cat</string>
    <string name="error_dg2_is_null">Application error \'DG2\', please try again. If the problem persists report it us at panda@panda.cat</string>
    <string name="error_error">Error</string>
    <string name="error_lost_connexion">Lost connexion, please try again</string>
    <string name="error_mutual_authentication_failed">Authentication failed, please check the passport No. / date of birth / date of expiry. If the problem persists write us at panda@panda.cat</string>
    <string name="error_nfc_exception">An error occurred, please try again. If the problem persists write us at panda@panda.cat</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="found_nfc_text">Found NFC Tag!</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="image_tab_text">Image</string>
    <string name="information_certification_authority">Certification authority</string>
    <string name="information_date_of_birth">Date of birth</string>
    <string name="information_date_of_expiry">Date of expiry</string>
    <string name="information_document_number">Document No.</string>
    <string name="information_document_type">Document type</string>
    <string name="information_gender">Gender</string>
    <string name="information_gender_female">Female</string>
    <string name="information_gender_male">Male</string>
    <string name="information_given_names">Given names</string>
    <string name="information_issued_by">Issued by</string>
    <string name="information_issuer_country">Issuer country</string>
    <string name="information_issuer_organization">Issuer organization</string>
    <string name="information_issuer_organizational_unit">Organizational unit</string>
    <string name="information_lds_hash_algorithm">LDS hash algorithm</string>
    <string name="information_nationality">Nationality</string>
    <string name="information_signature_algorithm">Signature algorithm</string>
    <string name="information_surname">Surname</string>
    <string name="information_tab_text">Information</string>
    <string name="information_valid_from">Certificate valid from</string>
    <string name="information_valid_until">certificate valid until</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="next_button_text">Next</string>
    <string name="passport_date_of_birth_shared_pref">passport_date_of_birth_shared_pref</string>
    <string name="passport_date_of_expiry_shared_pref">passport_date_of_expiry_shared_pref</string>
    <string name="passport_info_alert_text">The nfc chip of the passport is password protected, you need to provide following information</string>
    <string name="passport_info_shared_pref">passport_info_shared_pref</string>
    <string name="passport_number_shared_pref">passport_number_shared_pref</string>
    <string name="passport_number_text">Passport No.</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="reading_passport_progress">Reading passport content</string>
    <string name="search_menu_title">Search</string>
    <string name="security_tab_text">Security</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_reading_passport">Reading</string>
    <string name="title_activity_result_display">Data</string>
    <string name="title_activity_waiting_for_nfc">Waiting for NFC tag</string>
    <string name="waiting_for_nfc_text">Please place your device on the inner cover of the passport</string>
    <string name="permission_title">Permission</string>
    <string name="permission_description">Permissions needed for using camera</string>
    <string name="button_ok">Ok</string>
    <string name="error">Error occured</string>
    <string name="error_camera_result_description">Error while getting result from camera, try again</string>
</resources>