<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:paddingLeft="@dimen/margin_input_horizontal"
    android:paddingTop="@dimen/margin_input_vertical"
    android:paddingRight="@dimen/margin_input_horizontal"
    android:paddingBottom="@dimen/margin_input_vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/ReadNfcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="41dp"
        android:text="@string/next" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ReadNfcBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ReadNfcBtn"
            android:layout_below="@+id/PassportNbr"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/PassportNbr"
                        android:layout_alignBottom="@+id/DateOfBirth"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/passport_number"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/PassportNbr"
                        android:layout_alignBottom="@+id/DateOfBirth"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/birth_date"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/DateOfExpiration"
                        android:layout_alignBottom="@+id/DateOfExpiration"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/issue_date"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_weight="0.61"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/PassportNbr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:ems="10"
                        android:hint="XXXXXXXXXX"
                        android:inputType="textCapCharacters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/DateOfBirth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/PassportNbr"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:ems="10"
                        android:hint="00/00/0000"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/DateOfExpiration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/DateOfBirth"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:ems="10"
                        android:hint="00/00/0000"
                        android:inputType="date" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>