<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    tools:context=".ui.main.MainFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <!--top line-->

            <LinearLayout
                android:layout_width="@dimen/spacing_xlarge"
                android:layout_height="@dimen/spacing_mlarge"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_10" />

            </LinearLayout>

            <!--section title-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/step_title"
                        android:layout_width="@dimen/spacing_xlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="@drawable/ic_shape_round_solid"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10"
                        android:minHeight="?attr/actionBarSize" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_title"
                        style="@style/text_style_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="clickLabel"
                        android:text="@string/passport_number" />

                    <LinearLayout
                        android:id="@+id/lyt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="XXXXXXXXXX"
                            android:text="AA1069035"
                            android:textAllCaps="true" />

                        <Button
                            android:id="@+id/bt_continue_title"
                            style="@style/sign_up_button"
                            android:onClick="clickAction"
                            android:text="@string/next" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--section description-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/step_description"
                        android:layout_width="@dimen/spacing_xlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="@drawable/ic_shape_round_solid"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_description"
                        style="@style/text_style_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="clickLabel"
                        android:text="@string/birth_date" />

                    <LinearLayout
                        android:id="@+id/lyt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="DD/MM/YY"
                            android:text="050888"
                            android:inputType="number"
                            android:maxLength="6"/>

                        <Button
                            android:id="@+id/bt_continue_description"
                            style="@style/sign_up_button"
                            android:onClick="clickAction"
                            android:text="@string/next" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--section time-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/step_time"
                        android:layout_width="@dimen/spacing_xlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="@drawable/ic_shape_round_solid"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_time"
                        style="@style/text_style_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="clickLabel"
                        android:text="@string/issue_date" />

                    <LinearLayout
                        android:id="@+id/lyt_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="DD/MM/YY"
                            android:inputType="number"
                            android:text="180323"
                            android:maxLength="6"
                            android:maxLines="1" />

                        <Button
                            android:id="@+id/bt_continue_time"
                            style="@style/sign_up_button"
                            android:onClick="clickAction"
                            android:text="@string/next" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--section date-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/step_date"
                        android:layout_width="@dimen/spacing_xlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="@drawable/ic_shape_round_solid"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_date"
                        style="@style/text_style_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/read_passport_data" />

                    <LinearLayout
                        android:id="@+id/lyt_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/review_description"
                            android:maxLength="20" />

                        <Button
                            android:id="@+id/bt_continue_date"
                            style="@style/sign_up_button"
                            android:onClick="clickAction"
                            android:text="@string/start" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <!--bottom line-->

            <LinearLayout
                android:layout_width="@dimen/spacing_xlarge"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_10" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>